--- a/Views/Khachhang/Details.cshtml
+++ b/Views/Khachhang/Details.cshtml
@@ -16,15 +16,15 @@
                                 <table style = "margin-top:2%" id="table" data-toggle="table" data-pagination="true" data-search="true" data-show-columns="true" data-show-pagination-switch="true" data-show-refresh="true" data-key-events="true" data-show-toggle="true" data-resizable="true" data-cookie="true"
                                 data-cookie-id-table="saveId" data-show-export="true" data-click-to-select="true" data-toolbar="#toolbar">
                                     <thead>
-                                        <tr>
-                                            <th style="width:20%" data-field="id">Mã Khách Hàng</th>
-                                            <th style="width:25%" data-field="name" data-editable="true">Họ Tên</th>
-                                            <th style="width:25%" data-field="price" data-editable="true">Giới Tính</th>
-											<th style="width:25%" data-field="text" data-editable="true">Số Điện Thoại</th>
-											<th style="width:25%" data-field="text" data-editable="true">Địa Chỉ</th>
-                                            <th style="width:25%" data-field="text" data-editable="true">CMND</th>
-                                            <th style="width:25%" data-field="text" data-editable="true">Email</th>
-                                            <th data-field="action"></th>
+                                        <tr >
+                                            <th style="width:15%" data-field="id">Mã Khách Hàng</th>
+                                            <th style="width:15%" data-field="name" data-editable="true">Họ Tên</th>
+                                            <th style="width:10%" data-field="price" data-editable="true">Giới Tính</th>
+											<th style="width:15%" data-field="text" data-editable="true">Số Điện Thoại</th>
+											<th style="width:15%" data-field="text" data-editable="true">Địa Chỉ</th>
+                                            <th style="width:10%" data-field="text" data-editable="true">CMND</th>
+                                            <th style="width:15%" data-field="text" data-editable="true">Email</th>
+                                            <th style="width:15%" data-field="action"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
