tạo mã ngẫu nhiên

--- a/Views/Giaphong/Create.cshtml
+++ b/Views/Giaphong/Create.cshtml
@@ -69,7 +69,7 @@
                                                                 <label asp-for="GpMa" class="login2 pull-right pull-right-pro">Mã Giá Phòng</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="GpMa" type="text" class="form-control" />
+                                                                <input asp-for="GpMa" type="text" class="form-control" readonly/>
                                                             </div>
                                                             <span asp-validation-for="GpMa" class="text-danger"></span>
                                                         </div>
