--- a/Views/Chitiet/Create.cshtml
+++ b/Views/Chitiet/Create.cshtml
@@ -25,7 +25,7 @@
                                                                 <label asp-for="CtMa" class="login2 pull-right pull-right-pro">Mã Chi Tiết</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="CtMa" type="text" class="form-control" />
+                                                                <input asp-for="CtMa" type="text" class="form-control" readonly/>
                                                             </div>
                                                             <span asp-validation-for="CtMa" class="text-danger"></span>
                                                         </div>
