--- a/Views/ChitietGia/Create.cshtml
+++ b/Views/ChitietGia/Create.cshtml
@@ -25,7 +25,7 @@
                                                                 <label asp-for="CtgMa" class="login2 pull-right pull-right-pro">Mã Chi Tiết Giá</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="CtgMa" type="text" class="form-control" />
+                                                                <input asp-for="CtgMa" type="text" class="form-control" readonly />
                                                             </div>
                                                             <span asp-validation-for="CtgMa" class="text-danger"></span>
                                                         </div>
