--- a/Views/Dichvu/Create.cshtml
+++ b/Views/Dichvu/Create.cshtml
@@ -25,9 +25,9 @@
                                                                 <label asp-for="DvMa" class="login2 pull-right pull-right-pro">Mã Dịch Vụ</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="DvMa" type="text" class="form-control" />
+                                                                <input asp-for="DvMa" type="text" class="form-control" readonly />
                                                             </div>
-                                                            <span asp-validation-for="DvMa" class="text-danger"></span>
+                                                            <span asp-validation-for="DvMa" class="text-danger" ></span>
                                                         </div>
                                                     </div>
                                                     <div class="form-group-inner">
