--- a/Views/Khachhang/Create.cshtml
+++ b/Views/Khachhang/Create.cshtml
@@ -26,7 +26,7 @@
                                                                 <label asp-for="KhMa" class="login2 pull-right pull-right-pro">Mã Khách Hàng</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="KhMa" type="text" class="form-control" />
+                                                                <input asp-for="KhMa" type="text" class="form-control" readonly />
                                                             </div>
                                                             <span asp-validation-for="KhMa" class="text-danger"></span>
                                                         </div>
