--- a/Views/Nhanvien/Create.cshtml
+++ b/Views/Nhanvien/Create.cshtml
@@ -25,7 +25,7 @@
                                                                 <label asp-for="NvMa" class="login2 pull-right pull-right-pro">Mã Nhân Viên</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="NvMa" type="text" class="form-control" />
+                                                                <input asp-for="NvMa" type="text" class="form-control" readonly/>
                                                             </div>
                                                             <span asp-validation-for="NvMa" class="text-danger"></span>
                                                         </div>
