--- a/Views/Datphong/Create.cshtml
+++ b/Views/Datphong/Create.cshtml
@@ -36,7 +36,7 @@
                                                                 <label asp-for="DpTgnhan" class="login2 pull-right pull-right-pro">Thời Gian Nhận</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="DpTgnhan" type="text" class="form-control" />
+                                                                <input asp-for="DpTgnhan" type="datetime-local" class="form-control" />
                                                                 <span asp-validation-for="DpTgnhan" class="text-danger"></span>
                                                             </div>
                                                             
@@ -48,7 +48,7 @@
                                                                 <label asp-for="DpTgtra" class="login2 pull-right pull-right-pro">Thời Gian Trả</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="DpTgtra" type="text" class="form-control" />
+                                                                <input asp-for="DpTgtra" type="datetime-local" class="form-control" />
                                                             </div>
                                                             <span asp-validation-for="DpTgtra" class="text-danger"></span>
                                                         </div>
