--- a/Views/Hoadon/Index.cshtml
+++ b/Views/Hoadon/Index.cshtml
@@ -66,6 +66,22 @@
                                                     <a data-toggle="tooltip" class="pd-setting-ed" asp-action="Edit" asp-route-id="@item.HdMa"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> |
                                                     <a asp-action="Details" asp-route-id="@item.HdMa"><i class="fa fa-info-circle adminpro-informatio" aria-hidden="true"></i></a> |
                                                     <a data-toggle="tooltip" class="pd-setting-ed" asp-action="Delete" asp-route-id="@item.HdMa"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                                                    <a asp-action="Print"  asp-route-id="@item.HdMa" class="btn btn-custon-three btn-info" style="color:white;" type="button" target="_blank">In</a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
                                                 </td>
                                             </tr>
                                         }
