--- a/Views/Nhanvien/Create.cshtml
+++ b/Views/Nhanvien/Create.cshtml
@@ -48,7 +48,7 @@
                                                                 <label asp-for="NvMatkhau" class="login2 pull-right pull-right-pro">Mật Khẩu</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="NvMatkhau" type="text" class="form-control" />
+                                                                <input asp-for="NvMatkhau" type="password" class="form-control" />
                                                                 <span asp-validation-for="NvMatkhau" class="text-danger"></span>
                                                             </div>
                                                         </div>
