--- a/Views/Phong/Index.cshtml
+++ b/Views/Phong/Index.cshtml
@@ -29,10 +29,10 @@
                                         <tr>
                                             <th style="width:20%" data-field="id">Mã Phòng</th>
                                             <th style="width:25%" data-field="name" data-editable="true">Tên Phòng</th>
-                                            <th style="width:25%" data-field="text" data-editable="true">Số Lượng Giường</th>
-											<th style="width:25%" data-field="text" data-editable="true">Mô Tả</th>
-                                            <th style="width:25%" data-field="text" data-editable="true">Trạng Thái</th>
-											<th style="width:25%" data-field="text" data-editable="true">Loại Phòng</th>
+                                            <th style="width:25%" data-editable="true">Số Lượng Giường</th>
+											<th style="width:25%" data-editable="true">Mô Tả</th>
+                                            <th style="width:25%" data-editable="true">Trạng Thái</th>
+											<th style="width:25%" data-editable="true">Loại Phòng</th>
                                             <th data-field="action"></th>
                                         </tr>
                                     </thead>
@@ -56,7 +56,7 @@
                                                     @Html.DisplayFor(modelItem => item.PTrangthai)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.LpMaNavigation.LpMa)
+                                                    @Html.DisplayFor(modelItem => item.LpMaNavigation.LpTenloai)
                                                 </td>
                                                 <td>
                                                     <a data-toggle="tooltip" class="pd-setting-ed" asp-action="Edit" asp-route-id="@item.PMa"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> |
