--- a/Views/Khachhang/Create.cshtml
+++ b/Views/Khachhang/Create.cshtml
@@ -92,7 +92,7 @@
                                                                 <label asp-for="KhEmail" class="login2 pull-right pull-right-pro">Email</label>
                                                             </div>
                                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                                                <input asp-for="KhEmail" type="email" class="form-control" placeholder="Placeholder" />
+                                                                 <input asp-for="KhEmail" type="email" class="form-control" /> 
                                                             </div>
                                                             <span asp-validation-for="KhEmail" class="text-danger"></span>
                                                         </div>
