--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿@using Microsoft.AspNetCore.Http
+<!doctype html>
 <html class="no-js" lang="en">
 
 <head>
@@ -62,6 +63,14 @@
 </head>
 
 <body>
+     @* @if((Context.Session.GetString("NvTendn")) == null){
+        <script>
+            window.onload = function() {
+                // similar behavior as clicking on a link
+                window.location.href = "/Logins/index";
+            }
+        </script>
+    }  *@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -132,7 +141,7 @@
                                             <button type="button" id="sidebarCollapse" class="btn bar-button-pro header-drl-controller-btn btn-info navbar-btn">
 													<i class="fa fa-bars"></i>
 												</button>
-                                        </div>
+                                        </div> 
                                     </div>
                                     @* <div class="col-lg-6 col-md-7 col-sm-6 col-xs-12">
                                         <div class="header-top-menu tabl-d-n">
@@ -711,7 +720,7 @@
                 </div>
             </div>
             <!-- Mobile Menu end -->
-            <div class="breadcome-area">
+            @* <div class="breadcome-area">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -730,7 +739,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> *@
         </div>
         @* <div class="section-admin container-fluid">
             <div class="row admin text-center">
